Added List & modify component/style

--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -18,3 +18,15 @@ body {
 	background-color: #eee;
 	height: 100vh;
 }
+
+/* Page Structures */
+.container {
+	height: 100%;
+}
+
+.flex-column {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
