--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -8,9 +8,9 @@
 
 body {
 	box-sizing: inherit;
-	background: #333;
+	/* background: #333; */
 	height: 100vh;
-	width: 480px;
+	/* width: 480px; */
 	margin: 0 auto;
 }
 
@@ -29,4 +29,8 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+/* Desktop */
+@media (min-width: 480px) {
 }
